test/errhandling/modes/strict-try-nothrows.good
strict-try-nothrows.chpl:5: In function 'propError':
strict-try-nothrows.chpl:6: error: call to throwing function throwAnError without try or try! (strict mode)
../ExampleErrors.chpl:1: note: throwing function throwAnError defined here
