test/errhandling/modes/strict-try-nothrows.chpl
pragma "error mode strict"
module mymodule {
  use ExampleErrors;

  proc propError() {
    throwAnError();
  }

  writeln("should not compile");

  try {
    propError();
  } catch {
    writeln("in catch");
  }
}
